assets/css/style.css
/*Global Settings*/
* {
    margin: 0;
    padding: 0;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background: linear-gradient(to right, #314755, #26a0da) no-repeat;
    min-height: 100vh;
}


/*header Hero Section*/
header.hero {
    color: white;
    text-align: center;
    padding: 2rem 0;
}


header.hero h1 {
    margin: 0;
    font-size: 2.5rem;
}


#round-msg {
    display: none;
}


button {
    background-color: #ff7f60;
    color: #Fff;
    font-size: large;
    text-transform: capitalize;
    border: none;
    padding: 20px 40px;
    margin: 10px;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}


.button-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.btn {
    background-color: red;
}

.btn:hover {
    background-color: #ff6347;
    transform: scale(1.05);
}

/* Pop Up / Modal */
.modal-overlay {
    background-color: rgba(0, 0, 0, 0.5);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    visibility: hidden;
    z-index: -10;
}


/*Open / Close Modal*/
.open-overlay {
    visibility: visible;
    z-index: 10;
}


/*Modal Container*/
.modal-container {
    background: linear-gradient(to right, #fff, #e6e6e6);
    width: 80%;
    margin: 10% auto;
    padding: 20px;
    border-radius: 10px;
    overflow: hidden;
    box-sizing: border-box;
}


.modal-container h2,
.modal-container p {
    text-align: center;
}


.modal-container h2 {
    color: #ff7f60;
    text-transform: uppercase;
    font-size: 200%;
}


/*Button Choices*/
.btn-choices {
    display: flex;
    justify-content: center;
    align-items: center;
}


.btn-choices button {
    background-color: rgba(0, 0, 0, 0.0);
    position: relative;
    padding: 10px 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #ff7f60;
    border: 1px solid #ff7f60;
    font-size: medium;
    transition: background-color 0.3s ease;
}


.btn-choices button:hover {
    background-color: #ff6347;
    color: #Fff;
}


.btn-choices button img {
    width: 30px;
    height: 30px;
    margin-bottom: 10px;
}


/*Score Container*/
.score-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 20px;
}


.score-board {
    padding: 20px;
    border-radius: 15px;
    border: 1px solid #ddd;
    background: linear-gradient(to right, #fff, #e6e6e6);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 80%;
    margin: auto;
    box-sizing: border-box;
}


.round-info,
.scores,
.choices,
.next-round {
    margin: 20px 0;
}


.round-info h2,
.winner-info h2 {
    font-size: 1.5rem;
    margin: 0;
}


.round-count,
.score-count {
    font-size: 2rem;
    border: 2px solid #000;
    padding: 30px;
    margin: 10px auto;
    display: inline-block;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}


.score-count {
    margin-bottom: 30px;
    font-size: 2.5rem;
    font-weight: bold;
    color: #ff7f60;
}


.scores {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin: 30px 0;
}


.score h3 {
    margin: 0;
    font-size: 1.2rem;
}


.choices {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 80px;
}


.choices .user-choice,
.choices .computer-choice {
    width: 100px;
    text-align: center;
}


.choice-img {
    width: 80px;
    height: auto;
    margin-bottom: 10px;
}


.next-round {
    display: flex;
    justify-content: center;
    align-items: center;
}

.next-round button {
    background-color: red;
}


.next-round button:hover {
    background-color: #ff6347;
    transform: scale(1.05);
}


/*Winner and Final Container*/
#total-scores-computer,
#total-scores-user,
#result {
    color: #ff6347;
    font-size: larger;
}


.final-container {
    text-align: center;
    padding: 20px;
    border-radius: 15px;
    border: 1px solid #ddd;
    background: linear-gradient(to right, #fff, #e6e6e6);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 80%;
    margin: auto;
    box-sizing: border-box;
    margin-bottom: 20px;
    display: none;
    /*hidden by default*/
}


.final-container h2 {
    color: #ff7f60;
    font-size: 2rem;
    margin-bottom: 15px;
}


.final-container p {
    font-size: 1.2rem;
    margin-bottom: 10px;
}


.final-container .results {
    font-weight: bold;
}


.final-container .total-score {
    margin-top: 15px;
}


/*Responsiveness*/
@media screen and (max-width:768px) {

    /*header*/
    header.hero h1 {
        font-size: 2rem;
    }


    button {
        padding: 15px 30px;
        font-size: medium;
        margin: 8px;
    }


    /*Pop Up*/
    .modal-container {
        width: 95%;
        margin: 20px auto;
        padding: 20px;
    }


    .button-container button,
    .btn-choices button {
        padding: 15px 30px;
        font-size: medium;
    }


    .btn-choices {
        flex-wrap: wrap;
        justify-content: space-around;
        padding: 10px;
    }


    .btn-choices button {
        flex-basis: 45%;
        margin: 5px;
        padding: 10px 0;
    }


    .btn-choices button img {
        width: 25px;
        height: 25px;
    }


    /*score container*/
    .score-container {
        padding: 10px;
    }


    .score-board {
        width: 90%;
        margin: 20px auto;
        padding: 10px;
        border-radius: 10px;
    }


    .round-info,
    .scores,
    .schoices,
    .next-round {
        margin: 10px 0;
    }


    .round-count,
    .score-count {
        font-size: 1.5rem;
        padding: 20px;
        margin: 5px auto;
    }


    .score h3,
    .round-info h2,
    .winner-info h2 {
        font-size: 1rem;
    }


    .choices {
        flex-direction: column;
    }


    .choices span {
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-items: center;
    }


    .winner-info,
    .user-choice,
    .computer-choice {
        width: 100%;
        margin: 10px 0;
    }


    .user-choice,
    .computer-choice {
        padding: 10px;
        border-radius: 8px;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }


    .winner-info p,
    .user-choice p,
    .computer-choice p {
        margin: 5px 0;
        font-size: 1rem;
    }


    .choice-img {
        width: 40px;
        height: auto;
        margin: 5px;
    }


    /*Final Container*/
    .final-container {
        width: 90%;
        margin: 20px auto;
        padding: 10px;
        border-radius: 10px;
    }


    .final-container h2 {
        font-size: 1.5rem;
    }


    .final-container p {
        font-size: 1rem;
    }
}

